# cv-cifar10-classification

./: .gitignore  README.md  pyproject.toml
notebooks/: cifar10-classification.ipynb
